--- a/sass/main.scss
+++ b/sass/main.scss
@@ -149,3 +149,296 @@ h6{
 }
 
 // partie pour la grille a 4 photos
+
+.grid1{
+    padding-inline: 50px;
+
+    &__grille{
+        // width: 80px;
+        height: auto;
+        border: none;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 300px);
+        justify-content: center;
+        grid-gap: 15px;
+        padding-top: 30px;
+
+        .grid-item{
+
+            img{
+                width: 300px;
+                height: 200px;
+            }
+           
+        }
+    }
+
+}
+
+.produit{
+    padding-inline: 90px;
+    padding-top: 65px;
+    padding-bottom: 20px;
+
+    &__img{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        img {
+            width: 48%;
+            height: 200px;
+          }
+    }
+     
+
+    &__titre{
+        color: black;
+
+        ul{
+        text-align: center;
+        justify-content: center;
+            font-size: 17px;
+            font-weight: bold;
+        li{
+                
+            a:focus{
+                border-bottom: 4px solid #E55472; 
+            }
+                
+             }
+        }
+    }
+
+    &__image-grid {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 20px;
+
+      }
+      
+      .image-item {
+        text-align: center;
+
+        a {
+            color: inherit;
+            text-decoration: none;
+            color: #000000;
+            float: left;
+            }
+        a,
+        a:hover,
+        a:focus,
+        a:active {
+            text-decoration: none;
+            outline: none;
+            color: inherit; }
+          
+        a:hover {
+            color: #E55472; }
+
+        .stars {
+            font-size: 15px;
+          }
+          
+          .star {
+            display: inline-block;
+            margin-right: 5px;
+            float: left;
+
+          }
+      }
+      
+      .image-item img {
+        max-width: 100%;
+      }
+      
+      .image-item p {
+        margin-top: 10px;
+        font-size: 14px;
+      }
+      
+
+}
+
+.topp{
+    padding-inline: 90px;
+    padding-top: 35px;
+    padding-bottom: 20px;
+
+    &__titre{
+        color: black;
+        text-align: center;
+        justify-content: center;
+        font-size: 25px;
+    }
+
+    &__map-slider {
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+
+        .slider {
+            white-space: nowrap;
+            overflow-x: auto;
+          }
+          
+      }
+      
+      
+      .slide {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        position: relative;
+      }
+      
+      .slide img {
+        width: 90%;
+        height: auto;
+      }
+
+      a {
+        color: inherit;
+        text-decoration: none;
+        color: #000000;
+        float: left;
+        }
+    a,
+    a:hover,
+    a:focus,
+    a:active {
+        text-decoration: none;
+        outline: none;
+        color: inherit; }
+      
+    a:hover {
+        color: #E55472; }
+      
+      
+      @media screen and (min-width: 768px) {
+        .slide {
+          width: 24.7%;
+        }
+      }
+      
+}
+
+.ico{
+
+    padding-inline: 90px;
+    padding-top: 35px;
+    padding-bottom: 100px;
+
+    &__icones {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 10px;
+        justify-content: center;
+        align-items: center;
+        background-color: #eeeded;
+        border: 1px solid #bebebe;
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        &--icone {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            color: #666666;
+            font-size: 16px;
+            font-family: 'Montserrat', sans-serif;
+            padding: 40px 30px 15px;
+    
+            .comment{
+                display: flex;
+                flex-direction: column;
+                padding-left: 10px;
+    
+            }
+          }
+          
+          &--icone img {
+            width: 50px;
+           height: auto;
+         }
+      }
+        
+}
+
+.pied{
+
+    padding-inline: 50px;
+    padding-top: 35px;
+    &__photos {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-gap: 10px;
+        justify-content: center;
+        align-items: center;
+        background-color: #eeeded;
+        border: 1px solid #bebebe;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-left: 25px;
+    padding-right: 25px;
+
+        &--photo {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            color: #666666;
+            font-size: 16px;
+            font-family: 'Montserrat', sans-serif;
+            padding: 40px 20px ;
+    
+          }
+          
+          &--photo img {
+            width: 90px;
+           height: auto;
+           
+         }
+      }
+           
+}
+
+footer {
+    padding-inline: 50px;
+    padding-bottom: 45px;
+
+  
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      background-color: #272829;
+      padding-top: 95px;
+    padding-bottom: 65px;
+    padding-left: 45px;
+    padding-right: 45px;
+      
+  
+      .col {
+        width: calc(20% - 20px);
+        margin-bottom: 20px;
+  
+        ul {
+            display: flex;
+            flex-direction: column;
+          list-style: none;
+          padding: 0;
+          color:#999999;
+      }  
+
+        h4 {
+            margin-bottom: 10px;
+            color:white;
+          }
+    }
+}
+}
