--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,6 @@ body {
     font-style: normal;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
-    // line-height: 1.8;
     margin: 0 auto; }
 
     //Partie du header
@@ -139,6 +138,22 @@ h6{
             color: #000000;
             .texte{
                 width: 50%;
+
+                 
+                    opacity: 0;
+                    animation: fade-in 3s ease-in-out forwards;
+                  
+                
+                  @keyframes fade-in {
+                    0% {
+                      opacity: 0;
+                      transform: translateY(170px);
+                    }
+                    100% {
+                      opacity: 1;
+                      transform: translateY(0);
+                    }
+                  }
                 h2::before{
                     content: " ";
                     width: 100px;
@@ -223,7 +238,8 @@ h6{
         display: flex;
         justify-content: space-between;
         align-items: center;
-                    overflow: hidden;
+        overflow: hidden;
+        padding-top: 40px;
 
 
         img {
@@ -240,6 +256,8 @@ h6{
 
     &__titre{
         color: black;
+        padding-bottom: 40px;
+
 
         ul{
         text-align: center;
@@ -255,57 +273,77 @@ h6{
              }
         }
     }
-
-    &__image-grid {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 20px;
-
-      }
       
-      .image-item {
-        text-align: center;
+    &__map-slider {
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+          padding-bottom: 40px;
 
-        a {
-            color: inherit;
-            text-decoration: none;
-            color: #000000;
-            float: left;
-            }
-        a,
-        a:hover,
-        a:focus,
-        a:active {
-            text-decoration: none;
-            outline: none;
-            color: inherit; }
-          
-        a:hover {
-            color: #E55472; }
-
-        .stars {
-            font-size: 15px;
+        .slider {
+            white-space: nowrap;
+            overflow-x: auto;
           }
           
-          .star {
-            display: inline-block;
-            margin-right: 5px;
-            float: left;
+      }
+      
+      
+      .slide {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        position: relative;
 
+        &:hover .search-icons {
+            display: flex;
+          }
+
+        .search-icons {
+            position: absolute;
+            top: 72%;
+            left: 69%;
+            transform: translate(-50%, -50%);
+            display: none;
+
+             i {
+                display: block;
+                 margin-right: 2px;
+                font-size: 20px;
+                color: #fff;
+                background-color: #666666;
+                padding: 10px;
+              }
           }
       }
       
-      .image-item img {
-        max-width: 100%;
+      .slide img {
+        width: 90%;
+        height: auto;
       }
+
+      a {
+        color: inherit;
+        text-decoration: none;
+        color: #000000;
+        float: left;
+        }
+    a,
+    a:hover,
+    a:focus,
+    a:active {
+        text-decoration: none;
+        outline: none;
+        color: inherit; }
       
-      .image-item p {
-        margin-top: 10px;
-        font-size: 14px;
+    a:hover {
+        color: #E55472; }
+      
+      
+      @media screen and (min-width: 768px) {
+        .slide {
+          width: 24.7%;
+        }
       }
-      
 
 }
 
@@ -319,6 +357,8 @@ h6{
         text-align: center;
         justify-content: center;
         font-size: 25px;
+        padding-bottom: 40px;
+
     }
 
     &__map-slider {
@@ -339,6 +379,27 @@ h6{
         width: 100%;
         height: auto;
         position: relative;
+
+        &:hover .search-icons {
+            display: flex;
+          }
+
+        .search-icons {
+            position: absolute;
+            top: 72%;
+            left: 69%;
+            transform: translate(-50%, -50%);
+            display: none;
+
+             i {
+                display: block;
+                 margin-right: 2px;
+                font-size: 20px;
+                color: #fff;
+                background-color: #666666;
+                padding: 10px;
+              }
+          }
       }
       
       .slide img {
