--- a/sass/main.scss
+++ b/sass/main.scss
@@ -300,11 +300,14 @@ h6{
             display: flex;
           }
 
+          .top-card{
+            position: relative;
+          }
         .search-icons {
             position: absolute;
-            top: 72%;
-            left: 69%;
-            transform: translate(-50%, -50%);
+            bottom: 5px;;
+            right: 0px;
+            // transform: translate(-50%, -50%);
             display: none;
 
              i {
@@ -319,7 +322,7 @@ h6{
       }
       
       .slide img {
-        width: 90%;
+        width: 100%;
         height: auto;
       }
 
@@ -386,11 +389,14 @@ h6{
             display: flex;
           }
 
+          .top-card{
+            position: relative;
+          }
         .search-icons {
             position: absolute;
-            top: 72%;
-            left: 69%;
-            transform: translate(-50%, -50%);
+            bottom: 5px;
+            right: 0px;
+            // transform: translate(-50%, -50%);
             display: none;
 
              i {
@@ -405,7 +411,7 @@ h6{
       }
       
       .slide img {
-        width: 90%;
+        width: 100%;
         height: auto;
       }
 
