--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,6 +72,126 @@ li{
 .header__option{
     float: right;
     display: flex;
+
+    .cart.active{
+        right: 0;
+    }
+
+    .cart{
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 360px;
+        min-height: 100vh;
+        padding: 20px;
+        background: white;
+        box-shadow: -2px 0 4px hsla(0, 4%, 18%, 0.1);
+        z-index: 1;
+        transition: 0.3s;
+
+        .cart-title{
+            font-size: 25px;
+            font-weight: 600;
+            color: #000000;
+            margin-top: 32px;
+        }
+
+            .cart-box{
+                display: grid;
+                grid-template-columns: 32% 50% 18%;
+                align-items: center;
+                gap: 24px;
+                margin-top: 16px;
+
+                .cart-img{
+                    height: 100px;
+                    width: 100px;
+                    object-fit: contain;
+                    padding: 10px;
+                }
+
+                .detail-box{
+                    display: grid;
+                    row-gap: 8px;
+
+                    .cart-product-title{
+                        font-size: 16px;
+                        text-transform: uppercase; 
+                    }
+
+                    .cart-price{
+                        font-weight: 500;
+                    }
+
+                    .cart-quantity{
+                        border: 1px solid black;
+                        outline-color: red;
+                        width: 39px;
+                        text-align: center;
+                        font-size: 16px;
+                    }
+                }
+
+                .cart-remove{
+                    font-size: 24px;
+                    color: red;
+                    cursor: pointer;
+                }
+            }
+        
+            .total{
+                display: flex;
+                justify-content: space-between;
+                margin-top: 24px;
+                border-top: 1px solid black;
+                border-bottom: 1px solid black;
+                font-size: 24px;
+                padding-top:7px;
+                padding-bottom: 7px;
+
+                .total-title{
+                    color: black;
+                }
+
+                .total-price{
+                    color: #E55472;
+                }
+
+            }
+            .bt{
+                display: flex;
+                justify-content: space-between;
+                .btn-view{
+                    margin-top: 30px;
+                        color: white;
+                        background-color: #E55472;
+                        font-size: 15px;
+                        border: none;
+                        width: 100px;
+                        height: 40px
+                }
+    
+                .btn-checkout{
+                    margin-top: 30px;
+                        color: white;
+                        background-color:#272829;
+                        font-size: 15px;
+                        border: none;
+                        width: 100px;
+                        height: 40px
+                }
+            }
+
+            #close-cart{
+                position: absolute;
+                top: 55px;
+                right: 13px;
+                font-size: 24px;
+                color: #000000;
+                cursor: pointer;
+            }
+            
+    }
     a{
         span{
             // height: 37.5px;
