--- a/sass/main.scss
+++ b/sass/main.scss
@@ -80,7 +80,7 @@ li{
     .cart{
         position: fixed;
         top: 0;
-        right: 0;
+        right: -100%;
         width: 360px;
         min-height: 100vh;
         padding: 20px;
@@ -88,6 +88,11 @@ li{
         box-shadow: -2px 0 4px hsla(0, 4%, 18%, 0.1);
         z-index: 1;
         transition: 0.3s;
+
+        .cart-content{
+            overflow-x: hidden;
+            max-height: 400px;
+        }
 
         .cart-title{
             font-size: 25px;
@@ -100,7 +105,7 @@ li{
                 display: grid;
                 grid-template-columns: 32% 50% 18%;
                 align-items: center;
-                gap: 24px;
+                gap: 16px;
                 margin-top: 16px;
 
                 .cart-img{
