--- a/sass/main.scss
+++ b/sass/main.scss
@@ -211,15 +211,14 @@ li{
         }
     }
 
-    span.handbag::before {
-        content: "2";
+    .cart-count {
         background: red;
         width: 18px;
         height: 18px;
         color: white;
         border-radius: 100%;
         position: absolute;
-        transform: translate(10px, -6px);
+        transform: translate(-6px, -6px);
     }
 
    
@@ -429,6 +428,7 @@ h6{
             position: relative;
           }
         .search-icons {
+            cursor: pointer;
             position: absolute;
             bottom: 5px;;
             right: 0px;
@@ -518,6 +518,7 @@ h6{
             position: relative;
           }
         .search-icons {
+            cursor: pointer;
             position: absolute;
             bottom: 5px;
             right: 0px;
